objects/Trainee__c.object
<CustomObject>
    <fields>
        <fullName>Account2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainees (Account)</relationshipLabel>
        <relationshipName>Trainees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainees</relationshipLabel>
        <relationshipName>Trainees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Total_courses_amount__c  -  Total_amount_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Support Director</fullName>
                </value>
                <value>
                    <fullName>Sales Director</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Support Rep</fullName>
                </value>
                <value>
                    <fullName>IT Administrator</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_field__c</fullName>
        <label>Picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trainee value1</fullName>
                </value>
                <value>
                    <fullName>Trainee value2</fullName>
                </value>
                <value>
                    <fullName>Activity value1</fullName>
                </value>
                <value>
                    <fullName>Activity value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_amount_paid__c</fullName>
        <label>Total amount paid</label>
        <summarizedField>Attendant__c.Fee_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Attendant__c.Fee_Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendant__c.Trainee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_courses_Attended__c</fullName>
        <label>Total courses Attended</label>
        <summaryForeignKey>Attendant__c.Trainee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_courses_amount__c</fullName>
        <label>Total courses amount</label>
        <summarizedField>Attendant__c.Fee_Amount__c</summarizedField>
        <summaryForeignKey>Attendant__c.Trainee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Trainees</relationshipLabel>
        <relationshipName>Trainees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trainee</label>
    <listViews>
        <fullName>Alle</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>XXX Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <recordTypes>
        <fullName>Activty_record_type</fullName>
        <active>true</active>
        <label>Activty record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trainee_record_type</fullName>
        <active>true</active>
        <label>Trainee record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>